--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>StudentFlix</title>
+    <title>Student Management</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -38,5 +38,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
